feat(deploy): Add Nginx configuration and Docker Compose for HIS system